    * Terrain colour changes based on temperature now works properly (makes
      Earth look correct again)
    * Crash when using an illegal goods trader that is a police front (#88)
    * Crash when restoring bulleting board ads after loading a game (#86)
    * Crash in AI collision detection in ternary systems
    * Discovery Base (Sol) orbit too close to its parent (#116)

  * Internal changes
    * Lots of code cleanups, warnings silenced, etc
	* Fonts rendering controlled by per-font config files

Alpha 10

  * New stuff
    * Over 1200 real stars
    * Supergiant stars
    * Many new and more complex terrains
    * Nearby ship and firing alerts
    * Bulk freight ships outside starports
    * More station backgrounds
    * Mac OS X port

  * Little things
    * Prettier background stars and hyperspace effects
    * Reworked hyperspace ranges and durations
    * Wide variation of faces in bulletin board ads
    * Combat AI will give chase if the target tries to escape
    * Velocity measured relative to the frame rather than the target
    * Improved targetting squares and velocity indicators
    * Ships and other small objects not shown beyond a certain range
    * Unguided missiles work again
    * Option to invert mouse look
 
  * Under the hood
    * Rewritten Lua module API (with documentation!)
    * Hundreds of bugfixes and code cleanups

Alpha 9

  * New stuff
    * Completely rewritten autopilot. Its now far more likely to get you
      where you're going without flying into things on the way.
    * Rewritten combat AI.
    * Rewritten mouse control.
    * New combat target HUD with lead indicator and colour-coded closing
      rate.
    * New planetary terrains.
    * Identikit faces in starport screens.
    * New HUD for radar mapper and hyperspace cloud analyser.
    * Navigation computer to help you find your way around.
    * Trade ships (ie large non-combat ships) spawned when you enter a
      system.