@@ -13,6 +13,7 @@ Alpha 11
     * Crash when restoring bulleting board ads after loading a game (#86)
     * Crash in AI collision detection in ternary systems
     * Discovery Base (Sol) orbit too close to its parent (#116)
+    * Don't create illegal goods traders in systems with no illegal goods (#109)
 
   * Internal changes
     * Lots of code cleanups, warnings silenced, etc
